--- a/ConstructionSite/Views/Portfolio/Detail.cshtml
+++ b/ConstructionSite/Views/Portfolio/Detail.cshtml
@@ -87,7 +87,7 @@
                                                 {
                                                     <li class="flex-active-slide">
                                                         <a class="zoom" href="@item"><i class="fa fa-arrows-alt"></i></a>
-                                                        <img src="@item" alt="image" />
+                                                        <img class="portfolioSlider" src="@item" alt="image" />
                                                     </li>
                                                 }
 
@@ -118,7 +118,7 @@
                                             <ul class="slides">
                                                 @foreach (var item in Model.Images)
                                                 {
-                                                    <li><img src="@item" alt="image"></li>
+                                                    <li><img class="subImage" src="@item" alt="image"></li>
                                                 }
                                                 @*<li><img src="~/Images/portfolio/23319ce1-5b57-4b1a-ae5d-48aaeb0285dc.jpeg" alt="image"></li>
                                                     <li><img src="~/Images/portfolio/23319ce1-5b57-4b1a-ae5d-48aaeb0285dc.jpeg" alt="image"></li>
