--- a/ConstructionSite/Views/Services/SubService.cshtml
+++ b/ConstructionSite/Views/Services/SubService.cshtml
@@ -73,7 +73,7 @@
                                                 {
                                                     <li class="flex-active-slide">
                                                         <a class="zoom" href="@item"><i class="fa fa-arrows-alt"></i></a>
-                                                        <img src="@item" alt="image" />
+                                                        <img class="subserviceSliderImage" src="@item" alt="image" />
                                                     </li>
                                                 }
                                                 @*<li class="flex-active-slide">
@@ -102,7 +102,7 @@
                                             <ul class="slides">
                                                 @foreach (var item in Model.Images)
                                                 {
-                                                    <li><img src="@item" alt="image"></li>
+                                                    <li><img class="subserviceSliderSubImage" src="@item" alt="image"></li>
                                                 }
                                                 @*<li><img src="~/Images/subserver/18c2008c-61e9-4934-9dd1-16d97a2ddd8d.jpg" alt="image"></li>
                                                 <li><img src="~/Images/subserver/18c2008c-61e9-4934-9dd1-16d97a2ddd8d.jpg" alt="image"></li>
