--- a/ConstructionSite/Views/Shared/Components/GaleryVideos/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/GaleryVideos/Default.cshtml
@@ -1,43 +1,46 @@
-﻿@model List<ConstructionSite.ViwModel.FrontViewModels.Galery.GaleryFileFrontViewModel>
-<style>
+﻿@inject SharedLocalizationService Localizer
 
+<style>
     .spaces {
         margin-top: -250px;
     }
 
     iframe {
         width: 100% !important;
-        height: 200px !important;
+        height: 100% !important;
     }
 </style>
-@for (int i = 0; i < Model.Count; i++)
-{
-    if (Model[i].VideoPath != null)
+
+
+<div class="col-md-12">
+  
+    <h3>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Videos)</h3>
+    <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40"></div>
+
+    <div class="wprt-lines style-1 custom-3">
+        <div class="line-1"></div>
+        <div class="line-2"></div>
+    </div>
+    <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30"></div>
+    @for (int i = 0; i < ViewBag.Videos.Count; i++)
     {
-        <div class="col-md-12">
-            <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40"></div>
-
-            <h3>@Model[i].GaleryTitle</h3>
-            <div class="wprt-lines style-1 custom-3">
-                <div class="line-1"></div>
-                <div class="line-2"></div>
-            </div>
-            <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30"></div>
-
+        if (ViewBag.Videos[i].Vidopaths != null)
+        {
             <div class="wprt-galleries-grid" data-layout="grid" data-column="3" data-column2="2" data-column3="2" data-column4="1" data-gaph="10" data-gapv="10">
                 <div id="images-wrap" class="cbp">
                     <div class="cbp-item">
                         <div class="item-wrap">
-                            <a class="zoom" href="assets/img/gallery/2.jpg"><i class="fa fa-arrows-alt"></i></a>
-                          @Model[i].VideoPath
+                            <a class="zoom" href="@ViewBag.Videos[i].Vidopaths"><i class="fa fa-arrows-alt"></i></a>
+                            @ViewBag.Videos[i].Vidopaths
                         </div>
                     </div><!--/.cbp-item -->
 
                 </div><!-- /#images-wrap -->
             </div><!--/.wprt-galleries-grid -->
-
-            <div class="wprt-spacer" data-desktop="70" data-mobi="40" data-smobi="40"></div>
-        </div>
-      
+        }
     }
-}
+
+    <div class="wprt-spacer" data-desktop="70" data-mobi="40" data-smobi="40"></div>
+</div>
+
+
