--- a/ConstructionSite/wwwroot/assets/css/shortcodes.css
+++ b/ConstructionSite/wwwroot/assets/css/shortcodes.css
@@ -11,6 +11,19 @@
 .subImage {
     height: 120px;
 }
+.galerySliderImage {
+    height: 450px;
+}
+.galerySliderSubImage {
+    height: 120px;
+}
+.subserviceSliderImage {
+    height: 450px;
+}
+
+.subserviceSliderSubImage {
+    height: 120px;
+}
 #about {
     padding: 40px 0px;
 }
