--- a/ConstructionSite/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Views/Blog/Index.cshtml
@@ -25,7 +25,7 @@
                                     <span class="post-date item">
                                         <span class="inner">
                                             <span class="entry-date">
-                                                @item.CreateDate
+                                                @item.CreateDate.ToString("dddd, dd MMMM yyyy")
                                             </span>
                                         </span>
                                     </span>
