--- a/ConstructionSite/Views/Blog/Index.cshtml
+++ b/ConstructionSite/Views/Blog/Index.cshtml
@@ -16,7 +16,7 @@
             <div id="site-content" class="site-content clearfix" style="width: 100%">
                 <div class="hentry">
                     <div class="container">
-                        <h1>@item.Title</h1>
+                        <h1 show-content="@item.Title" ></h1>
                         <div class="post-meta style-3">
                             <div class="post-meta-content">
                                 <div class="post-meta-content-inner">
