--- a/ConstructionSite/Views/Shared/Components/GaleryVideos/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/GaleryVideos/Default.cshtml
@@ -13,7 +13,7 @@
 
 
 <div class="col-md-12">
-  
+
     <h3>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Videos)</h3>
     <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40"></div>
 
@@ -30,8 +30,9 @@
                 <div id="images-wrap" class="cbp">
                     <div class="cbp-item">
                         <div class="item-wrap">
-                            <a class="zoom" href="@ViewBag.Videos[i].Vidopaths"><i class="fa fa-arrows-alt"></i></a>
-                            @ViewBag.Videos[i].Vidopaths
+                            <!--<a class="zoom" href="@ViewBag.Videos[i].Vidopaths"><i class="fa fa-arrows-alt"></i></a>-->
+                            @*@ViewBag.Videos[i].Vidopaths*@
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/4Jh_2L-z8ag?start=150" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
                     </div><!--/.cbp-item -->
 
