--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Add.cshtml
@@ -52,6 +52,11 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-11">
+                                <input asp-for="viodPath" id="f-name" class="form-control" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-lg-11">
                                 <input asp-for="files" multiple="multiple" id="f-name" class="form-control" placeholder="Title RU" required>
                             </div>
                         </div>
