--- a/ConstructionSite/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Views/_ViewImports.cshtml
@@ -21,6 +21,7 @@
 @using ConstructionSite.Helpers.Paging
 @using ConstructionSite.Entity.Models
 @using ConstructionSite.Localization
+@using ConstructionSite.Extensions.Strings 
 @using ConstructionSite.Helpers.Constants
 
 #<!-- #region ViewComponent -->
