--- a/ConstructionSite/Views/Shared/Components/GaleryVideos/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/GaleryVideos/Default.cshtml
@@ -32,7 +32,7 @@
                     <div class="cbp-item">
                         <div class="item-wrap">
                             <div>
-                                <a class="zoom" href="@item.Vidopaths"><i class="fa fa-arrows-alt"></i></a>
+                                <a class="zoom" href="@item.Vidopaths.GetSRC()"><i class="fa fa-arrows-alt"></i></a>
                                 
                                 <iframe width="560" height="315" src="@item.Vidopaths.GetSRC()" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                           
