--- a/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/SubService/Index.cshtml
@@ -74,9 +74,9 @@
                             @foreach (var item in Model)
                             {
                                 <tr class="odd">
-                                    <td></td>
+                                 
                                     <td class="sorting_1 img-style">@item.Name</td>
-                                    <td class="img-style">SubService Content</td>
+                                    <td class="img-style">@item.Content</td>
                                     <td class="img-style">
                                         <img width="60" height="60" src="@item.ImagePath" alt="Alternate Text" />
                                     </td>
