--- a/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@addTagHelper ConstructionSite.Areas.ConstructionAdmin.TagHelpers.*,ConstructionSite
+@addTagHelper ConstructionSite.Areas.TagHelpers.*,ConstructionSite
 @using Microsoft.AspNetCore.Identity
 @using ConstructionSite.ViwModel.AdminViewModels.Galery
 @using ConstructionSite.DTO.AdminViewModels.Account
