--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Update.cshtml
@@ -50,6 +50,11 @@
                                 <input asp-for="TitleRu" id="f-name" class="form-control" placeholder="Title RU" required>
                             </div>
                         </div>
+                        <div class="form-group">
+                            <div class="col-lg-11">
+                                <input asp-for="VidoPath" id="f-name" class="form-control" placeholder="VidoPath" required>
+                            </div>
+                        </div>
                         <div class="wrapper--preview">
                             @if (Model.Images == null | Model.Images.Count < 1)
                             {
