--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Update.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Update.cshtml
@@ -52,7 +52,7 @@
                         </div>
                         <div class="form-group">
                             <div class="col-lg-11">
-                                <input asp-for="VidoPath" id="f-name" class="form-control" placeholder="VidoPath" required>
+                                <input asp-for="VidoPath" id="f-name" class="form-control" placeholder="VidoPath" >
                             </div>
                         </div>
                         <div class="wrapper--preview">
