--- a/ConstructionSite/Views/Shared/Components/GaleryVideos/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/GaleryVideos/Default.cshtml
@@ -1,50 +1,51 @@
 ﻿@inject SharedLocalizationService Localizer
-@model  IEnumerable<GaleryVidoViewoModel>
+@model IEnumerable<GaleryVidoViewoModel>
 
 <style>
-    .spaces {
-        margin-top: -250px;
-    }
+   s
 
     iframe {
         width: 100% !important;
-        height: 100% !important;
+        height: 250px !important;
     }
+
 </style>
 
 
 <div class="col-md-12">
 
     <h3>@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.Videos)</h3>
-    <div class="wprt-spacer" data-desktop="50" data-mobi="40" data-smobi="40"></div>
+    <div class="wprt-spacer" data-desktop="20" data-mobi="20" data-smobi="20"></div>
 
     <div class="wprt-lines style-1 custom-3">
         <div class="line-1"></div>
         <div class="line-2"></div>
     </div>
     <div class="wprt-spacer" data-desktop="30" data-mobi="30" data-smobi="30"></div>
-    @foreach (var item in Model)
-    {
-        if (item.Vidopaths != null)
-        {
-            <div class="wprt-galleries-grid" data-layout="grid" data-column="3" data-column2="2" data-column3="2" data-column4="1" data-gaph="10" data-gapv="10">
-                <div id="images-wrap" class="cbp">
+    <div class="wprt-galleries-grid" data-layout="grid" data-column="3" data-column2="2" data-column3="2" data-column4="1" data-gaph="10" data-gapv="10">
+        <div id="images-wrap" class="cbp">
+            @foreach (var item in Model)
+            {
+                if (item.Vidopaths != null)
+                {
+
                     <div class="cbp-item">
                         <div class="item-wrap">
-                            
-                                <a class="zoom" href="@item.Vidopaths.GetSRC()"><i class="fa fa-arrows-alt"></i></a>
-                                
-                                <iframe width="560" height="315" src="@item.Vidopaths.GetSRC()" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                          
-                           
-                           
+
+                            <a class="zoom" href="@item.Vidopaths.GetSRC()"><i class="fa fa-arrows-alt"></i></a>
+
+                            <iframe width="560" height="315" src="@item.Vidopaths.GetSRC()" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+
                         </div>
                     </div><!--/.cbp-item -->
 
-                </div><!-- /#images-wrap -->
-            </div><!--/.wprt-galleries-grid -->
-        }
-    }
+
+                }
+            }
+        </div><!-- /#images-wrap -->
+    </div><!--/.wprt-galleries-grid -->
 
     <div class="wprt-spacer" data-desktop="70" data-mobi="40" data-smobi="40"></div>
 </div>
