--- a/ConstructionSite/Views/Shared/Components/About/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/About/Default.cshtml
@@ -12,7 +12,7 @@
 
             </div>
             <div class="col-md-6">
-                <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
+                @*<div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>*@
                 <h2 class="text-center margin-top-30">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.AboutUs)</h2>
                 <div class="wprt-lines style-2 custom-1">
                     <div class="line-1"></div>
