--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Index.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Index.cshtml
@@ -59,6 +59,7 @@
                     <thead>
                         <tr role="row">
                             <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">Name</th>
+                            <th class="sorting_disabled" role="columnheader" rowspan="1" colspan="1" aria-label="Username" style="width: 182px;">image</th>
                             <th class="sorting edit-delete" role="columnheader" tabindex="0" aria-controls="editable-sample" rowspan="1" colspan="1" aria-label="Edit: activate to sort column ascending" style="width: 87px;">#</th>
                         </tr>
                     </thead>
