--- a/ConstructionSite/Views/Services/SubService.cshtml
+++ b/ConstructionSite/Views/Services/SubService.cshtml
@@ -40,9 +40,9 @@
                                     <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
 
 
-                                    <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
+                                    @*<div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
 
-                                    <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
+                                    <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>*@
                                 </div><!-- /.col-md-12 -->
 
                                 <div class="col-md-6">
