--- a/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Portfolio/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<PortfolioViewModel>
 @inject SharedLocalizationService Localizer
 
-<section id="works" class="wprt-section bground">
+<section id="works" class="">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
