--- a/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
+++ b/ConstructionSite/Views/Shared/_MainnavPartial.cshtml
@@ -36,7 +36,7 @@
 
                     <li class="menu-item menu-item-has-children">
                         <a style="color: #ffffff;" href="#">AZ</a>
-                        <ul class="sub-menu" style="width: 100px;">
+                        <ul class="sub-menu" style="width: 100px; background-color: white;">
                             @foreach (var item in cultureItems)
                             {
                                 <li>
