--- a/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Add.cshtml
+++ b/ConstructionSite/Areas/ConstructionAdmin/Views/Galery/Add.cshtml
@@ -29,44 +29,47 @@
     <div class="row">
         <div class="col-lg-12">
             <section class="panel add-model">
-                <header class="panel-heading">
-                    Create News Elements
-                </header>
+                
+              
                 <hr />
                 <div class="panel-body add-body">
                     <form role="form" class="form-horizontal tasi-form" asp-area="ConstructionAdmin" asp-controller="Galery" asp-action="Add" method="post" enctype="multipart/form-data">
-                        <div class="form-group">
-                            <div class="col-lg-11">
-                                <input type="text" asp-for="TitleAz" id="f-name" class="form-control" placeholder="Title AZE" required>
+                      
+                        <div class="col-md-6">
+                            <header class="panel-heading" style="padding: 2px 0px">
+                                Create News Image
+                            </header>
+                            <div class="form-group">
+                                <div class="col-lg-11">
+                                    <input asp-for="viodPath" id="f-name" class="form-control" required>
+                                </div>
+                            </div>
+                            <div class="form-group" style="margin-left: 53%;">
+                                <div class="col-lg-offset-2 col-lg-12">
+                                    <button class="btn btn-success about-button" type="submit">Save</button>
+                                    <button class="btn btn-default cancel-button" type="button">Cancel</button>
+                                </div>
                             </div>
                         </div>
-                        <div class="form-group">
-                            <div class="col-lg-11">
-                                <input asp-for="TitleEn" id="f-name" class="form-control" placeholder="Title ENG" required>
+                        <div class="col-md-6">
+                            <header class="panel-heading" style="padding: 2px 0px">
+                                Create News Video
+                            </header>
+                          
+                            <div class="form-group">
+                                <div class="col-lg-11">
+                                    <input asp-for="files" multiple="multiple" id="f-name" class="form-control" placeholder="Title RU" required>
+                                </div>
                             </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-lg-11">
-                                <input asp-for="TitleRu" id="f-name" class="form-control" placeholder="Title RU" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-lg-11">
-                                <input asp-for="viodPath" id="f-name" class="form-control" required>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-lg-11">
-                                <input asp-for="files" multiple="multiple" id="f-name" class="form-control" placeholder="Title RU" required>
+                            <div class="form-group" style="margin-left: 53%;">
+                                <div class="col-lg-offset-2 col-lg-12">
+                                    <button class="btn btn-success about-button" type="submit">Save</button>
+                                    <button class="btn btn-default cancel-button" type="button">Cancel</button>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="form-group" style="margin-left: 72%;">
-                            <div class="col-lg-offset-2 col-lg-11">
-                                <button class="btn btn-success about-button" type="submit">Save</button>
-                                <button class="btn btn-default cancel-button" type="button">Cancel</button>
-                            </div>
-                        </div>
+                       
                     </form>
                 </div>
             </section>
