--- a/ConstructionSite/Views/About/Index.cshtml
+++ b/ConstructionSite/Views/About/Index.cshtml
@@ -16,9 +16,9 @@
                                     <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
 
 
-                                    <div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
+                                    @*<div class="wprt-spacer" data-desktop="36" data-mobi="30" data-smobi="30"></div>
 
-                                    <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>
+                                    <div class="wprt-spacer" data-desktop="40" data-mobi="30" data-smobi="30"></div>*@
                                 </div><!-- /.col-md-12 -->
 
                                 <div class="col-md-6">
@@ -39,7 +39,7 @@
                                 </div><!-- /.col-md-6 -->
 
                                 <div class="col-md-6">
-                                    <div style="height: 400px;">
+                                    <div>
                                         <img src="@Model.Image" alt="image" draggable="false" style="margin-top: 40px; height: 100%; width: 100%; object-fit: cover">
                                     </div>
 
