--- a/ConstructionSite/Views/Message/Index.cshtml
+++ b/ConstructionSite/Views/Message/Index.cshtml
@@ -16,7 +16,7 @@
 
 <div id="main-content" class="site-main clearfix">
     <div id="content-wrap">
-        <h1 class="featured-title-heading" style="text-align: center;">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h1>
+        @*<h1 class="featured-title-heading" style="text-align: center;">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h1>*@
         <div id="site-content" class="site-content clearfix">
             <div id="inner-content" class="inner-content-wrap">
                 <div class="page-content">
