--- a/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Blog/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BlogViewModel>
 @inject SharedLocalizationService Localizer
 
-<section id="blog" class="wprt-section offer">
+<section id="blog" class="">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
