--- a/ConstructionSite/Views/Shared/Components/Message/Default.cshtml
+++ b/ConstructionSite/Views/Shared/Components/Message/Default.cshtml
@@ -7,11 +7,11 @@
             <div id="inner-content" class="inner-content-wrap">
                 <div class="page-content">
                     <section class="wprt-section">
-                        <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>
+                        @*<div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40" style="height:100px"></div>*@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-12">
-                                    <div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>
+                                    @*<div class="wprt-spacer" data-desktop="100" data-mobi="40" data-smobi="40"></div>*@
                                     <h2 class="text-center margin-bottom-20">@Localizer.GetLocalizedHtmlString(RESOURCEKEYS.ContactUs)</h2>
                                     <div class="wprt-lines style-2 custom-1">
                                         <div class="line-1"></div>
